<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgAppLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/auto_alert_cropped" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAppLogo"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/imgAppTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/auto_alert_title"
                    />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginVertical="8dp"
            android:elevation="4dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtChangeLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_language_title"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/nunito_bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnChangeToPolishLanguage"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/polish_flag_icon" />


                <ImageView
                    android:id="@+id/btnChangeToEnglishLanguage"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/english_flag_icon" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginVertical="5dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIconAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/icon_authors_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/txtIconsAuthor1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icons_text"
                    app:drawableStartCompat="@drawable/car_inspection_icon"
                    android:gravity="center_vertical"
                    android:drawablePadding="9dp"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtIconsAuthor2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_icons_text"
                    app:drawableStartCompat="@drawable/car_icon"
                    android:gravity="center_vertical"
                    android:drawablePadding="9dp"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtIconsAuthor3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flags_icons_text"
                    app:drawableStartCompat="@drawable/polish_flag_icon"
                    android:gravity="center_vertical"
                    android:drawablePadding="9dp"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtIconsAuthor4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trash_icon_text"
                    app:drawableStartCompat="@drawable/trash_icon"
                    android:gravity="center_vertical"
                    android:drawablePadding="12dp"
                    android:textSize="16sp"
                    />

                <TextView
                    android:id="@+id/txtIconsSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="9dp"
                    android:gravity="center_vertical"
                    android:text="@string/icons_site_text"
                    android:textColor="@color/default_input_border"
                    android:textSize="13sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginVertical="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txtAppAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/app_creator_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:padding="5dp"
                        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                        android:src="@drawable/app_author_image"
                        android:layout_marginHorizontal="10dp"/>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_github_text"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/nunito_bold"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>