<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarAlertActivity"
    android:background="@color/primary_bg"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:drawableStart="@drawable/baseline_arrow_back_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black"
        android:text="@string/add_car_activity_title"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ip_car_name_layout"
        style="@style/MyTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_weight="0.3"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack"
        app:startIconDrawable="@drawable/car_input_icon"
        app:startIconTint="@null"
        app:startIconTintMode="screen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ip_car_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_name_input"
            android:inputType="textVisiblePassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:maxLength="30"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCarImage"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@android:color/transparent"
        android:paddingHorizontal="25dp"
        android:text="@string/choose_image_text_button"
        android:textColor="#49454F"
        android:textSize="16sp"
        app:cornerRadius="4dp"
        app:icon="@drawable/gallery_icon"
        app:iconGravity="textEnd"
        app:iconTint="@null"
        app:iconTintMode="screen"
        app:iconSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_car_name_layout"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="1.1dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddCarImage">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_car_date_layout"
            style="@style/MyTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            app:helperText="@string/car_inspection_text"
            app:helperTextTextColor="@color/black"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/car_inspection_icon"
            app:startIconTint="@null"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="165dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_car_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fdc177"
                android:hint="DD/MM/YYYY"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14dp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/MyTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingStart="5dp"
            android:paddingEnd="20dp"
            app:helperText="@string/car_insurance_text"
            app:helperTextTextColor="@color/black"
            app:hintEnabled="false"
            app:startIconDrawable="@drawable/car_insurance_icon"
            app:startIconTint="@null"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="263dp"
            android:backgroundTintMode="@color/primary_red"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_insurance_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fdc177"
                android:hint="DD/MM/YYYY"
                android:inputType="date"
                android:maxLength="10"
                android:textColor="@color/black"
                android:textCursorDrawable="@null"
                android:textSize="14dp" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>




    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/notify_me_text"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:textSize="17sp"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        >

        <CheckBox
            android:id="@+id/checkMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_before_text"
            app:buttonTint="@color/primary_blue" />

        <CheckBox
            android:id="@+id/checkWeek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_before_text"
            app:buttonTint="@color/primary_blue" />

        <CheckBox
            android:id="@+id/checkDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_before_text"
            app:buttonTint="@color/primary_blue" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/demo_view_text"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/carLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            android:elevation="0dp"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="125dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgCarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/transparent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtCarName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:paddingTop="5dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgCarInspectionDate"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginEnd="6dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/car_inspection_icon_green"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtCarInspectionDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="1dp"
                        android:paddingTop="1dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgCarInsuranceDate"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginEnd="6dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/car_insurance_icon_green"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/txtCarInsuranceDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="1dp"
                        android:paddingTop="1dp"
                        android:text=""
                        android:textSize="15dp" />
                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddCarAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minWidth="170dp"
        android:text="@string/add_notification_text_button"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary_red"
        app:cornerRadius="8dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/primary_red"
        app:strokeWidth="2.5dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-9446516549704282/2838644342"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddCarAlert" />


</androidx.constraintlayout.widget.ConstraintLayout>